# CrossingRoad_MyPart

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Framework/: CMakeLists.txt  pch.hpp
src/Framework/Asset/: CMakeLists.txt  manager.hpp
src/Framework/State/: CMakeLists.txt  manager.cpp  manager.hpp  state.hpp
src/Framework/Util/: CMakeLists.txt  center.cpp  center.hpp  context.cpp  context.hpp  identifier.hpp  utility.cpp  utility.hpp
src/Framework/Widget/: CMakeLists.txt  button.cpp  button.hpp  widget.cpp  widget.hpp
src/Game/: CMakeLists.txt  application.cpp  application.hpp
src/Game/Entity/: CMakeLists.txt  animal.cpp  animal.hpp  object.hpp  vehicle.cpp  vehicle.hpp
src/Game/State/: CMakeLists.txt  menu.cpp  menu.hpp
src/Game/States/: CMakeLists.txt  loading.cpp  loading.hpp  menu.cpp  menu.hpp  pause.cpp  pause.hpp  playing.cpp  playing.hpp
